[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Blue_node_full_image_2.jpg" type="Texture" id=2]
[ext_resource path="res://Menu/LemonMilk.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.08072
margin_bottom = -1.08069
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -155.0
margin_top = 100.0
margin_right = 155.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Simulateur"
align = 1
valign = 1

[node name="NewProject" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -100.0
margin_right = 118.0
margin_bottom = -25.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Nouveau projet"

[node name="OpenProject" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -3.05176e-05
margin_right = 118.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Ouvrir projet"

[node name="Leave" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 100.0
margin_right = 118.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Fermer"

[node name="CreateProjectFile" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -155.5
margin_right = 173.0
margin_bottom = 155.5
window_title = "Create new project"
current_dir = "res://Saves"
current_file = "save2.sav"
current_path = "res://Saves/save2.sav"

[node name="OpenProjectFile" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -155.5
margin_right = 173.0
margin_bottom = 155.5
window_title = "Open a File"
mode = 0
current_dir = "res://Saves"
current_file = "save2.sav"
current_path = "res://Saves/save2.sav"
[connection signal="pressed" from="NewProject" to="." method="_on_NewProject_pressed"]
[connection signal="pressed" from="OpenProject" to="." method="_on_OpenProject_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_Leave_pressed"]
[connection signal="file_selected" from="CreateProjectFile" to="." method="_on_FileDialog_file_selected"]
[connection signal="file_selected" from="OpenProjectFile" to="." method="_on_FileDialog_file_selected"]
